[package]
name = "edgefirst-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]

[dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true, optional = true }
num-traits = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dma-heap = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rand = { workspace = true }
procfs = { workspace = true }

[[bench]]
name = "tensor_benchmark"
harness = false
