[package]
name = "edgefirst-tracker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
enum_dispatch = { workspace = true }
lapjv = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
uuid = { workspace = true }
